fixed language menu overlapping in firefox

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -285,6 +285,7 @@ hr {
     padding: 13px 0;
     border:1px solid #dfdfdf;
     white-space:nowrap;
+    z-index: 100;
 }
 .lang:hover li ul{
     display:block;
